--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
-  "name": "cms",
-  "main": "index.html"
+  "name": "CMS Withcenter",
+  "main": "cms/index.html",
+
+  "window": {
+    "toolbar": true
+  }
+
 }
+
